themes/main/src/sass/nacional.scss
@import '_includes/colors';
@import '_includes/query';
@import '_includes/mixins';
@import '_includes/constants';

#home {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  max-width: 2 * $COLUMN-WIDTH;
  padding-left: 10px;
  padding-right: 10px;
  @include margin-site($HEADER-HEIGHT-CONTRACTED);
  @include get-font(NACIONAL);

  @include media-query (THREE){
    flex-wrap: nowrap;
    max-width: 3 * $COLUMN-WIDTH;
    padding-left: 0;
    padding-right: 0;
    @include margin-site($HEADER-HEIGHT-DESKTOP + $MENU-HEIGHT-DESKTOP);
  }

  @include media-query (FOUR){
    max-width: 4 * $COLUMN-WIDTH;
  }

  @include media-query(FIVE) {
    max-width: 5 * $COLUMN-WIDTH;
  }

  a {
    color: $link;

    &:hover {
      color: $link-hover;
    }
  }

  section + section {
    margin-top: $VERTICAL-SPACE;
  }
}

#home {
  #featured_1 {
    @include media-query(THREE){
      order: -10;
    }
  }

  #featured_2 {
    @include media-query(THREE){
      order: -9;
    }
  }

  #featured_3 {
    @include media-query(THREE){
      order: -7;
    }

    @include media-query(FIVE){
      order: -8;
    }
  }

  #featured_text_container {
    display: flex;
    flex-wrap: wrap;

    @include media-query(FOUR){
      width: 2 * $COLUMN-WIDTH;
      order: -8;
    }

    @include media-query(FIVE){
      width: 4 * $COLUMN-WIDTH;
      order: -7;
    }
  }

  #videos {
    order: -6;
  }

  #images {
    order: -5;

    @include media-query(FOUR){
      order: -4;
    }

    @include media-query(FIVE){
      order: -5;
    }
  }

  #featured_7 {
    order: -4;

    @include media-query(FOUR){
      order: -5;
    }

    @include media-query(FIVE){
      order: -4;
    }
  }

  #featured_8 {
    order: -3;
  }
}

#home .main {
  display: flex;
  flex-wrap: wrap;
  width: 100%;

  @include media-query (THREE){
    width: 2 * $COLUMN-WIDTH;
    flex-flow: row wrap;
  }
  @include media-query (FOUR){
    width: 3 * $COLUMN-WIDTH;
  }
  @include media-query (FIVE){
    width: 4 * $COLUMN-WIDTH;
  }

  .divisor + .divisor {
    border-top: 1px solid $vertical-bar;
    padding-top: $VERTICAL-SPACE;

    @include media-query(THREE){
      border-top: 0;
      padding-top: 0;
    }
  }

  .description{
    margin-top: 10px;
  }

  article {
    margin-bottom: $VERTICAL-SPACE;
  }

  .radar, .columns, .last_news {
      width: 100%;
      @include media-query(THREE) {
        display: none;
      }
  }
}

#home .box_container {
  @include media-query(THREE){
    width: $COLUMN-WIDTH;
    @include space-between-columns();
  }
}

#home .featured_big_picture {
  width: 100%;
  @include picture-with-caption();

  @include media-query(THREE) {
    width: 2 * $COLUMN-WIDTH;
    @include space-between-columns();
  }

  figure {
    @include image-rounded(450px, 330px);
    width: 100%;
  }
}

#home .featured_small_picture {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  @include space-between-columns();

  @include media-query(THREE) {
    width: $COLUMN-WIDTH;
  }

  figure {
    @include image-rounded(150px, 150px);
    display: inline-block;

    @include media-query(THREE) {
      @include image-rounded(220px, 220px);
      display: block;
    }
  }

  .title {
    display: inline-block;
    position: absolute;
    width: 50%;
    max-width: 270px;
    padding-right: 10px;
    padding-left: 10px;

    @include media-query(THREE) {
      position: relative;
      width: 100%;
      border-left: 3px solid $vertical-bar;
      padding-left: 10px;
      margin-top: $VERTICAL-SPACE;
    }
  }
}

#home .featured_text_and_title{
  width: 100%;

  @include media-query(THREE) {
    width: 2 * $COLUMN-WIDTH;
    @include space-between-columns();
  }

  .title {
    border-left: 3px solid $vertical-bar;
    padding-left: 10px;
    margin-top: $VERTICAL-SPACE;
  }
}

#home .box_container {
  @include media-query(THREE){
    width: $COLUMN-WIDTH;
    @include space-between-columns();
  }

  .featured_text_box {
    background-color: $box-background;
    border-top: 3px solid $box-boder;
    padding: 10px;
  }
}

#home .article_footer {
  width: 50%;
  @include space-between-columns();
  margin-top: 10px;

  @include media-query (THREE){
    width: $COLUMN-WIDTH;
  }

  .title {
    border-left: 3px solid $vertical-bar;
    padding-left: 10px;
    margin-top: $VERTICAL-SPACE;
  }

  .hat{
    @include section-name();
  }

  img{
    border-radius: 5px;
    width: 100%;
  }
}

#home .gallery-images, .gallery-videos{
    height: 320px;
    max-width: 2 * $COLUMN_WIDTH;
    width: 100%;
    margin-bottom: 30px;
    @include space-between-columns();

    .section-name {
      @include section-name();
    }

    iframe{
      height: 100%;
      width: 100%;
    }
}

#home .photo_caption {
  @include picture-with-caption();
  @include space-between-columns();

  @include media-query(THREE) {
    width: 2 * $COLUMN-WIDTH;
  }

  @include media-query(FOUR) {
    width: 3 * $COLUMN-WIDTH;
  }

  @include media-query(FIVE){
    width: 2 * $COLUMN-WIDTH;
    padding-top: 35px;
  }
}

#home .most_read {
  width: 100%;
  @include space-between-columns();

  .section-name {
    @include section-name();
  }

  ol {
    counter-reset: li;
    margin: 15px 0 0 35px;
  }

  ol > li {
    list-style: none;
    line-height: 1.2em;
    margin-bottom: 7px;
  }

  ol > li:before{
    content: counter(li) ".";
    counter-increment: li;
    margin: 0 10px 0 -35px;
    color: $red-base;
  }
}

#home .sidebar {
  display: none;

  @include media-query(THREE) {
    display: inline-block;
    width: $COLUMN-WIDTH;
    @include space-between-columns();
  }

  section + section {
    margin-top: $VERTICAL-SPACE;
  }
}

#home .radar {
  width: $COLUMN-WIDTH;
  img {
    width: 100%;
  }
}

#home .columns {
  .section-name {
    @include section-name();
  }

  img{
    border-radius: 50%;
    height: 80px;
    max-width: 80px;
    align-self: center;

    @include media-query(THREE) {
      height: 60px;
      max-width: 60px;
    }
  }

  .title {
    color: $title-color;
    margin-top: 5px;
  }

  .columnist + .columnist {
    margin-top: 15px;
  }

  .column {
    margin-left: 10px;
  }

  .columnist {
    display: flex;
    margin-top: 15px;

    figure {
      display: flex;
      flex: 0 0 90px;
      justify-content: center;

      @include media-query(THREE) {
        flex: 0 0 70px;
      }
    }
  }
}


#home .last_news {
  @include space-between-columns();

  .section-name {
    @include section-name();
  }

  ol > li {
    list-style: none;
    line-height: 1.2em;
    padding : 5px 0 5px 8px;
    border-left: 3px solid $vertical-bar;
    margin-top: 10px;
  }
}

